refactor(tfi-flow-core): 解耦内核配置默认值并缓存导出耗时
- 新增 FlowConfigDefaults，承载 session/context/export 内核默认值；
  ConfigDefaults 保留为兼容别名委托给前者，避免运行时依赖 compare/tracking 配置
- 新增 TaskDurationCache，导出阶段一次性计算累计耗时，消除重复遍历
- 同步更新 api/context/exporter/model/spi 相关实现与对应测试

Co-authored-by: Cursor <cursoragent@cursor.com>